--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -32,7 +32,7 @@
               </ul>
               <div class="navbar-nav">
                 {% if user.is_authenticated%}
-                  <a class="nav-item nav-link" href="#">Profile</a>
+                  <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                   <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                 {% else %}
                   <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
