--- a/users/templates/users/post.html
+++ b/users/templates/users/post.html
@@ -1,29 +1,43 @@
-{% extends "users/base.html" %}
-{% load static %}
-{% load crispy_forms_tags %}
+{% extends "users/base.html" %} {% load static %} {% load crispy_forms_tags %}
 {% block content %}
-<br>
-<br>
-<br>
+<br />
+<br />
+<br />
 <div class="container">
-    <div class="row py-5 mt-4 align-items-center">
-        <!-- For Demo Purpose -->
-        <div class="col-md-5 pr-lg-5 mb-5 mb-md-0">
-            <h1></h1>
-            
-        </div>
-
-                </div>
-           
-        </div>
-        <!-- Login Form -->
-        
+  <div class="jumbotron" style="background-color: rgb(233, 233, 233)">
+    <form method="POST" enctype="multipart/form-data">
+      {% csrf_token %}
+      <fieldset class="form-group">
+        <legend class="border-bottom mb-4" style="text-align: center">
+          Login
+        </legend>
+        {{ form|crispy }}
+        {% comment %} {{ imgform|crispy }} {% endcomment %}
+        <label>Upload Property Images : </label>
+        <input type="file" name="image" accept="image/*" multiple class="form-control">
+      </fieldset>
+      <div class="form-group">
+        <button class="btn btn-outline-info" type="submit">Sign In</button>
+      </div>
+    </form>
+    <div class="border-top pt-3">
+      <small class="text-muted"
+        >Not a Member?<a class="ml-2" href="{% url 'register'%}"
+          >Register Now!</a>
+          </small>
     </div>
+  </div>
 </div>
 
-{% endblock content %}
-
-{% block js %}
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+{% endblock content %} {% block js %}
+<script
+  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+  crossorigin="anonymous"
+></script>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+  crossorigin="anonymous"
+></script>
 {% endblock js %}
