--- a/users/templates/users/postList.html
+++ b/users/templates/users/postList.html
@@ -14,54 +14,54 @@
   <div class="form_left">
     <form method='POST'>
             {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4" style="text-align : center;">List of different properties to live in!!</legend>
+            <h4 class="border-bottom mb-4" style="text-align : center;">Book your ideal Holiday Home.</h4>
+               <div class="search_cont">
                 {{ form|crispy }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Search</button>
-            </div>
+                <button class="search_btn btn-outline-info" type="submit">Search</button>
+                </div>
         </form>
      </div>
     <br>
     <h6 class="left_head text-left">Top Rated Properties : </h6>
-    {% for p in posts %}
-<div class="card left_card">
-        {% comment %} <div class="row no-gutters"> {% endcomment %}
-            {% comment %} <div class="col-auto"> {% endcomment %}
-                <img src="/media/{{p.image}}" class="img-fluid left_img" alt="">
-            {% comment %} </div> {% endcomment %}
-            {% comment %} <div class="col"> {% endcomment %}
+    {% for key,p in posts.items %}
+<div class="top_prop">
+<div class="card left_card mt-3" style="width:250px;">
+                <img src="/media/{{p.0.image}}" class="img-fluid left_img" alt="">
                 <div class="card-block px-2">
-                <div class="persuasion__item pc__entireProperty">
-                <div class="pc__html">ROOM IN HOUSE <span>{{p.post.Area}} SQ.FT</span></div>
-                </div>
-                    <h6 class="card-title">{{p.post.name}}</h6>
+                    <h6 class="card-title">{{p.0.post.name}}</h6>
                     <p class="card-text">{{p.post.desc}}</p>
-                    {% comment %} <a href="#" class="btn btn-primary">Explore!!</a> {% endcomment %}
                 </div>
-            {% comment %} </div> {% endcomment %}
-        {% comment %} </div> {% endcomment %}
+  </div>
+  <div class="card left_card mt-3" style="width:250px;">
+                <img src="/media/{{p.0.image}}" class="img-fluid left_img" alt="">
+                <div class="card-block px-2">
+                    <h6 class="card-title">{{p.0.post.name}}</h6>
+                    <p class="card-text">{{p.post.desc}}</p>
+                </div>
+  </div>
   </div>
   {% endfor %}
   </div>
 <div class="right">
-    <div class="container d-flex flex-row-reverse justify-content-center cont">
+    <div class="container cont">
 {% if posts %}
-{% for p in posts %}
-<div class="card custom-c">
+{% for key, p in posts.items %}
+<div class="card custom-c mt-3">
         <div class="row no-gutters">
             <div class="col-auto">
-                <img src="/media/{{p.image}}" class="img-fluid custom-img" alt="">
+                <img src="/media/{{p.0.image}}" class="img-fluid custom-img" alt="">
             </div>
             <div class="col">
                 <div class="card-block px-2">
                 <div class="persuasion__item pc__entireProperty">
-                <div class="pc__html">ROOM IN HOUSE <span>{{p.post.Area}} SQ.FT</span></div>
+                <div class="pc__html">ROOM IN HOUSE <span class="pst_area">{{p.0.post.Area}} SQ.FT</span></div>
                 </div>
-                    <h4 class="card-title">{{p.post.name}}</h4>
-                    <p class="card-text">{{p.post.desc}}</p>
-                    <a href="http://localhost:8000/showPost/{{p.post.id}}" class="btn btn-primary">Explore!!</a>
+                    <h4 class="card-title">{{p.0.post.name}}</h4>
+                    <div class="p_cont">
+                    <p class="card-text">{{p.0.post.desc}}</p>
+                    </div>
+
+                    <a href="http://localhost:8000/showPost/{{key}}" class="btn btn-primary mt-3 mb-3">Explore!!</a>
                 </div>
             </div>
         </div>
