--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,64 +1,59 @@
-{% extends "users/base.html" %}
-{% load crispy_forms_tags %}
+{% extends "users/base.html" %} {% load crispy_forms_tags %} 
 {% load static %}
 {% block style %}
- <link rel="stylesheet" type="text/css" href="{% static 'users/Registerform.css' %}">
-{% endblock style %}
+<style>
+.loginfrm {
+    color: #eae7d6;
+}
+#hint_id_username{
+  color: #eae7d6;
+  {% comment %} background-color: #eae7d6; {% endcomment %}
+}
+</style>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{% static 'users/Register.css' %}"
+/>
+{% endblock style %} 
 {% block body %}
 <div class="container">
-<div style="background-color: rgb(233, 233, 233);" >
-        <form method='POST'>
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Registration</legend>
-                <div class="row">
-                  <div class="col-md-6">
-                     {{u_form.first_name|as_crispy_field}}
-                  </div>
-                    <div class="col-md-6">
-                     {{u_form.last_name|as_crispy_field}}
-                  </div>
-                </div> 
-                  <div>{{u_form.username|as_crispy_field}}</div>
-                <div>{{u_form.email|as_crispy_field}}</div>
-                <div class="row">
-                  <div class="col-md-12">
-                     {{u_form.bio|as_crispy_field}}
-                  </div>
-                </div>
-                    <div class="row">
-                  <div class="col-md-6">
-                     {{u_form.gender|as_crispy_field}}
-                  </div>
-                    <div class="col-md-6">
-                     {{u_form.birth_date|as_crispy_field}}
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-6">
-                     {{u_form.mobile_no|as_crispy_field}}
-                  </div>
-                    <div class="col-md-6">
-                     {{u_form.city|as_crispy_field}}
-                  </div>
-                </div>
-            <div class="row">
-                  <div class="col-md-6">
-                     {{u_form.password1|as_crispy_field}}
-                  </div>
-                    <div class="col-md-6">
-                     {{u_form.password2|as_crispy_field}}
-                  </div>
-                </div>
-
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
-            </div>
-        </form>
-        <div class="border-top pt-3">
-            <small class="text-muted">Already a Member?<a class="ml-2" href="{% url 'login'%}">Sign In</a> </small>
+  <div class="frm">
+    <form method="POST" class="loginfrm">
+      {% csrf_token %}
+      <fieldset class="form-group">
+        <legend class="register_head mb-4">Registration</legend>
+        <div class="row">
+          <div class="col-md-6">{{u_form.first_name|as_crispy_field}}</div>
+          <div class="col-md-6">{{u_form.last_name|as_crispy_field}}</div>
         </div>
+        <div>{{u_form.username|as_crispy_field}}</div>
+        <div>{{u_form.email|as_crispy_field}}</div>
+        <div class="row">
+          <div class="col-md-12">{{u_form.bio|as_crispy_field}}</div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">{{u_form.gender|as_crispy_field}}</div>
+          <div class="col-md-6">{{u_form.birth_date|as_crispy_field}}</div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">{{u_form.mobile_no|as_crispy_field}}</div>
+          <div class="col-md-6">{{u_form.city|as_crispy_field}}</div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">{{u_form.password1|as_crispy_field}}</div>
+          <div class="col-md-6">{{u_form.password2|as_crispy_field}}</div>
+        </div>
+      </fieldset>
+      <div class="form-group">
+        <button class="btn btn-outline-info" type="submit">Sign Up</button>
+      </div>
+    </form>
+    <div class="border-top pt-3">
+      <small class="bottom_link"
+        >Already a Member?<a class="ml-2" href="{% url 'login'%}">Sign In</a>
+      </small>
     </div>
-    </div>
+  </div>
+</div>
 {% endblock body %}
