--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,28 +1,27 @@
 {% extends "users/base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% block style %}
+<link rel="stylesheet" type="text/css" href="{% static 'users/login.css'%}">
 {% endblock style %}
 
-
 {% block body %}
-<div class="container">
-
-    <div class="jumbotron" style="background-color: rgb(233, 233, 233);">
-
+<div class="login">
+<div class="container mycont">
+    {% comment %} <div class="jumbotron" style="background-color: #092230;"> {% endcomment %}
         <form method='POST'>
             {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4" style="text-align : center;">Login</legend>
+                <h5 class="mb-4 head" style="text-align:center;">Login</h5>
                 {{ form|crispy }}
-            </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign In</button>
+                <button class="btn btn-outline-info" type="submit">LogIn</button>
             </div>
         </form>
         <div class="border-top pt-3">
-            <small class="text-muted">Not a Member?<a class="ml-2" href="{% url 'register'%}">Register Now!</a></small>
+            <small class="bottom_link">Not a Member?<a class="ml-2" href="{% url 'register'%}">Register Now!</a></small>
         </div>
-    </div>
+    {% comment %} </div> {% endcomment %}
+</div>
 </div>
 {% endblock body %}
     
