--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -7,38 +7,11 @@
 <br>
 <div class="container">
     <div class="row py-5 mt-4 align-items-center">
-        <!-- For Demo Purpose -->
-        <div class="col-md-5 pr-lg-5 mb-5 mb-md-0">
-            <h1>Logout</h1>
-            
-        </div>
-        <div class="col-md-7 col-lg-6 ml-auto">
-            
-                <h1> YOU HAVE LOGGED OUT!</h1>
-                
+            <div class="col-md-12 col-lg-12 mx-auto">
+                <h1 class="text-center"> YOU HAVE LOGGED OUT!</h1>
                     <a href="{% url 'login' %}"> LOGIN AGAIN</a>
-                    
-                    
-
-                    <!-- Divider Text -->
-                    {% comment %} <div class="form-group col-lg-12 mx-auto d-flex align-items-center my-4">
-                        <div class="border-bottom w-100 ml-5"></div>
-                        <span class="px-2 small text-muted font-weight-bold text-muted">OR</span>
-                        <div class="border-bottom w-100 mr-5"></div>
-                    </div> {% endcomment %}
-
-                    
-
-                    <!-- Already Registered -->
-                    {% comment %} <div class="text-center w-100">
-                        <p class="text-muted font-weight-bold">Not Registered? <a href="#" class="text-primary ml-2">Register</a></p>
-                    </div> {% endcomment %}
-
                 </div>
-           
         </div>
-        <!-- Login Form -->
-        
     </div>
 </div>
 
