--- a/users/templates/users/postList.html
+++ b/users/templates/users/postList.html
@@ -14,39 +14,40 @@
   <div class="form_left">
     <form method='POST'>
             {% csrf_token %}
-            <h4 class="border-bottom mb-4" style="text-align : center;">Book your ideal Holiday Home.</h4>
+            <h4 class="border-bottom mb-3" style="text-align : center;">Book your ideal Holiday Home.</h4>
                <div class="search_cont">
                 {{ form|crispy }}
-                <button class="search_btn btn-outline-info" type="submit">Search</button>
+                <button class="search_btn btn btn-outline-primary" type="submit">Search</button>
                 </div>
         </form>
      </div>
-    <br>
-    <h6 class="left_head text-left">Top Rated Properties : </h6>
-    {% for key,p in posts.items %}
-<div class="top_prop">
-<div class="card left_card mt-3" style="width:250px;">
-                <img src="/media/{{p.0.image}}" class="img-fluid left_img" alt="">
-                <div class="card-block px-2">
-                    <h6 class="card-title">{{p.0.post.name}}</h6>
-                    <p class="card-text">{{p.post.desc}}</p>
-                </div>
+
+    <h6 class="left_head text-left">Top Rated Properties in India: </h6>
+    <div class="row">
+    {% for r_post in reviews %}
+      <div class="shadow card left_card ml-1" style="width:200px;">
+          <a class="stretched-link text-decoration-none" href="http://localhost:8000/showPost/{{r_post.0.post.id}}">
+                      <img src="/media/{{r_post.0.image}}" class="img-fluid left_img" alt="">
+                      <div class="card-block px-2" style="color: black;">
+                          <h6 class="card-text">{{r_post.0.post.name|title}}<span class="ml-5">{{}}</span></h6>
+                          <p class="card-text">{{r_post.0.post.city|title}}<span>, {{r_post.0.post.state|title}}</span></p>
+                      </div>
+          </a>
+      </div>
+
+      {% if forloop.counter|divisibleby:2 %}
+      </div>
+      <div class="row mt-1">
+    {% endif %}
+    {% endfor %}
+    </div>
   </div>
-  <div class="card left_card mt-3" style="width:250px;">
-                <img src="/media/{{p.0.image}}" class="img-fluid left_img" alt="">
-                <div class="card-block px-2">
-                    <h6 class="card-title">{{p.0.post.name}}</h6>
-                    <p class="card-text">{{p.post.desc}}</p>
-                </div>
-  </div>
-  </div>
-  {% endfor %}
-  </div>
+
 <div class="right">
     <div class="container cont">
 {% if posts %}
 {% for key, p in posts.items %}
-<div class="card custom-c mt-3">
+<div class="shadow card custom-c mt-3 mr-3">
         <div class="row no-gutters">
             <div class="col-auto">
                 <img src="/media/{{p.0.image}}" class="img-fluid custom-img" alt="">
@@ -61,7 +62,7 @@
                     <p class="card-text">{{p.0.post.desc}}</p>
                     </div>
 
-                    <a href="http://localhost:8000/showPost/{{key}}" class="btn btn-primary mt-3 mb-3">Explore!!</a>
+                    <a href="http://localhost:8000/showPost/{{key}}" class="btn btn-outline-primary mt-3 mb-3">Explore!!</a>
                 </div>
             </div>
         </div>
