--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,23 +1,61 @@
 {% extends "users/base.html" %}
-{% load static %}
-{% load crispy_forms_tags %}
+{% block style %}
+.logout{
+    background-color:blue;
+    height:100vh;
+    width:100vw;
+}
+{% endblock %}
 {% block content %}
-<br>
-<br>
-<br>
+<div class="logout">
 <div class="container">
-    <div class="row py-5 mt-4 align-items-center">
-            <div class="col-md-12 col-lg-12 mx-auto">
-                <h1 class="text-center"> YOU HAVE LOGGED OUT!</h1>
-                    <a href="{% url 'login' %}"> LOGIN AGAIN</a>
-                </div>
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+	      			You have logged out successfully!
+           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+         </button>
         </div>
+
+ <div id="demo" class="carousel slide" data-ride="carousel">
+
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+  </ul>
+
+  <!-- The slideshow -->
+  <div class="carousel-inner" style=" width:100%; height: 200px !important;>
+    <div class="carousel-item active">
+      <img class="caraousel_img d-block mx-auto" src="https://wallpaperaccess.com/full/838646.jpg" alt="Houses">
+      <div class="carousel-caption">
+        <h6> HOGWARTSs.. </h6>
+      </div>
     </div>
+    <div class="carousel-item">
+      <img class=" caraousel_img d-block mx-auto" src="https://www.visitcalifornia.com/sites/visitcalifornia.com/files/VC_WWoHP_ImageUpdates_Supplied_Portrait-Gallery-in-Hogwarts-Castle-WWoHP-at-USH_1280x640.jpg" alt="Hogwarts Castle">
+        <div class="carousel-caption">
+        <h6> Castle.. </h6>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img class=" caraousel_img d-block mx-auto" src="https://wallpaperboat.com/wp-content/uploads/2019/06/harry-potter-6.jpg" alt="Hogwarts">
+        <div class="carousel-caption">
+        <h6> Chamber Of Secrets.. </h6>
+      </div>
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+
 </div>
-
-{% endblock content %}
-
-{% block js %}
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-{% endblock js %}
+</div>
+</div>
+{% endblock content %}    			
